# mflight

./: CMakeLists.txt  build.sh
core/STM32F051/: STM32F051R8TX_FLASH.ld  core.cmake
core/STM32F103/: STM32F103C8TX_FLASH.ld  core.cmake  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h
src/: main.c
src/lib/FreeRTOS/include/: FreeRTOSConfig.h
src/lib/mavlink/common/: common.h  mavlink.h  version.h
src/lib/mavlink/minimal/: mavlink.h  minimal.h  version.h
src/lib/mavlink/standard/: mavlink.h  standard.h  version.h
tool/: gcc_compiler.cmake
